--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       }
       let html = `<table class="table table-striped"><thead><tr><th>Name</th><th>TC Number</th><th>Phone</th><th>Date</th><th>Package</th><th>Actions</th></tr></thead><tbody>`;
       students.forEach((student, index) => {
-        html += `<tr><td>${student.name || ''}</td><td>${student.tc || ''}</td><td>${student.phone || ''}</td><td>${student.date || ''}</td><td>${student.package || ''}</td><td><button class="btn btn-sm btn-danger" onclick="deleteStudent(${index})">Delete</button></td></tr>`;
+        html += `<tr><td>${student.name || ''}</td><td>${student.tc || ''}</td><td>${student.phone || ''}</td><td>${student.date || ''}</td><td>${student.package || ''}</td><td><button class="btn btn-sm btn-secondary me-1" onclick="editStudent(${index})">Edit</button><button class="btn btn-sm btn-danger" onclick="deleteStudent(${index})">Delete</button></td></tr>`;
       });
       html += '</tbody></table>';
       container.innerHTML = html;
@@ -637,14 +637,19 @@
     document.getElementById('addStudentForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const student = {
-        id: Date.now().toString(),
+        id: editingStudentIndex !== null ? students[editingStudentIndex].id : Date.now().toString(),
         name: document.getElementById('studentName').value.trim(),
         tc: document.getElementById('studentTC').value.trim(),
         phone: document.getElementById('studentPhone').value.trim(),
         date: document.getElementById('studentDate').value,
         package: document.getElementById('studentPackage').value
       };
-      students.push(student);
+      if (editingStudentIndex !== null) {
+        students[editingStudentIndex] = student;
+        editingStudentIndex = null;
+      } else {
+        students.push(student);
+      }
       localStorage.setItem('students', JSON.stringify(students));
       displayStudents();
       updateDropdowns();
@@ -773,6 +778,19 @@
     // Hide dashboard content by default (if not logged in)
     if (sessionStorage.getItem('dashboardLoggedIn') !== '1') {
       document.querySelector('.container-fluid').style.display = 'none';
+    }
+
+    // Edit student logic
+    let editingStudentIndex = null;
+    function editStudent(index) {
+      const student = students[index];
+      document.getElementById('studentName').value = student.name;
+      document.getElementById('studentTC').value = student.tc;
+      document.getElementById('studentPhone').value = student.phone;
+      document.getElementById('studentDate').value = student.date;
+      document.getElementById('studentPackage').value = student.package;
+      editingStudentIndex = index;
+      document.getElementById('studentName').focus();
     }
   </script>
 </body>
