--- a/index.html
+++ b/index.html
@@ -753,6 +753,7 @@
     document.getElementById('expenses-tab').addEventListener('shown.bs.tab', displayExpenses);
     document.getElementById('accounts-payable-tab').addEventListener('shown.bs.tab', displayAccountsPayable);
     document.getElementById('monthly-report-tab').addEventListener('click', generateStudentReport);
+    document.getElementById('monthly-report-tab').addEventListener('shown.bs.tab', generateStudentReport);
 
     // Simple login logic
     const LOGIN_USER = 'kryekm';
