--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="mt-4">
           <label for="bulkLessons" class="form-label">Bulk Lesson Entry (one per line: Student,Teacher,Date,Time,Duration,Notes)</label>
           <textarea id="bulkLessons" class="form-control mb-2" rows="4" placeholder="Ali Veli,Mehmet,2024-01-10,10:00,60,Grammar\nAli Veli,Mehmet,2024-01-12,10:00,60,Speaking"></textarea>
-          <button id="bulkLessonsBtn" class="btn btn-primary">Toplu Ekle</button>
+          <button id="bulkLessonsBtn" class="btn btn-primary">Bulk Add</button>
         </div>
         <div class="table-responsive">
           <div id="lessons-table"></div>
